--- a/app/assets/stylesheets/scores.css.scss
+++ b/app/assets/stylesheets/scores.css.scss
@@ -22,3 +22,11 @@
   padding-bottom:5px;
 }
 
+.mikes-jumbo {
+  padding: 10px;
+  text-align: center;
+  margin-bottom: 0px;
+  p {
+    margin-bottom: 0px;
+  }
+}
