--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -1,7 +1,7 @@
 <style>
   body {
     display: block;
-    background: url('/assets/background/<%= params[:id] %>.png') no-repeat center center fixed;
+    background: url(<%= asset_path("background/#{params[:id]}.png") %>) no-repeat center center fixed;
     background-size: cover;
   }
 
