--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,10 +3,11 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
+          <li><a href="#">Score</a></li>
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <%= image_tag "logo/#{params[:id]}.png" %>
-          </a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= image_tag "logo/#{params[:id]}.png" %>
+            </a>
             <ul class="dropdown-menu">
               <% %w[nfl nhl nba].each do |league| %>
                 <% unless params[:id] == league %>
@@ -15,6 +16,7 @@
               <% end %>
             </ul>
           </li>
+          <li><a href="#">Standings</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
